Restrict VPN to target package and expose control

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PcapPlusPlus Toy Vpn</string>
+    <string name="app_name">Quest Network Shaper</string>
 </resources>
